tests/NormalTests/paczka1/fuzzy1/46783109.err
Error in line 1: TfSpT S228 65,4
Error in line 5: yjoa5 S228 68,2
Error in line 7: zqNJueNKXS S228 74,0
Error in line 8: yjoa5 A693 22,2
Error in line 11: zqNJueNKXS A693 39,4
Error in line 18: 1pZ2L S228 81,4
Error in line 15: TfSpT A572 59,5
Error in line 30: rm1Tv1z1f S326 40,3
